--- a/Week5/Day5/EXP/style.css
+++ b/Week5/Day5/EXP/style.css
@@ -1,9 +1,25 @@
 body {
+  background-image: url("https://c.tenor.com/lEuZK57PtxIAAAAC/space-stars.gif");
+  /* background-repeat: no-repeat; */
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 .heroCard {
+  font-size: x-large;
+  color: white;
+  position: absolute;
+  top: 30%;
   border: 2px solid yellow;
   height: 300px;
-  width: 300px;
+  width: 500px;
 }
 button {
+  font-size: 20px;
+  border: 2px solid yellow;
+  position: absolute;
+  height: 60px;
+  width: 200px;
+  top: 80%;
+  cursor: pointer;
 }
