--- a/Week10/Day1/exp2/tic-tac-toe/src/App.css
+++ b/Week10/Day1/exp2/tic-tac-toe/src/App.css
@@ -7,22 +7,48 @@
   pointer-events: none;
 }
 
+.container {
+  background-color: rgb(194, 204, 200);
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 600px;
+  height: 815px;
+}
 .square {
   background: #fff;
-  border: 1px solid #999;
+  border: 2px solid black;
   float: left;
-  font-size: 24px;
+  font-size: 60px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  height: 100px;
+
   text-align: center;
-  width: 34px;
+  width: 100px;
+}
+
+.btnsCont {
+  margin: 5px;
+}
+.btns {
+  padding: 5px;
+  width: 97px;
+  margin: 1px;
+  font-weight: bold;
 }
 .boardRow {
   display: table;
+  margin-left: 3px;
+  margin-right: 3px;
+}
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(59, 82, 43);
 }
 
 .App-header {
