--- a/Week9/Day5/DailyChallenge/movie-app/src/components/landStyle.css
+++ b/Week9/Day5/DailyChallenge/movie-app/src/components/landStyle.css
@@ -1,20 +1,115 @@
 body {
-  display: flex;
+  /* display: flex;
+  flex-direction: column; */
 }
-.containerMovie {
-  background: rgba(255, 255, 255, 0.3);
-  border: 1px solid black;
 
+.containerMovie {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
-
-  justify-content: space-between;
-  flex-grow: 1;
   align-items: center;
-  object-fit: contain;
+  width: 300px;
+  height: 450px;
+  /* margin-top: 5px;
+  margin-bottom: 5px; */
+}
+.searchContainer {
+  align-self: center;
+  width: 80%;
+  height: 150px;
+  background: rgb(236, 204, 204);
+}
+.elem {
+  display: inline-block;
+  /* padding: 5px; */
+  margin: 5px;
+}
+
+.page {
+  display: flex;
+}
+
+.detailsCont {
+  display: inline-block;
+  width: 70%;
+  /* flex-wrap: wrap; */
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.imgCont {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.detailsImg {
+  height: 100%;
+  width: 100%;
+}
+
+.list-group {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+.list-group-item {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  display: block;
+  position: relative;
+  padding: 0.75rem 1.25rem;
+}
+
+.about {
+  width: 100%;
+  height: 140px;
+  margin-top: 5px;
+  background: rgb(37, 37, 37);
+  color: white;
+}
+
+input {
+  width: 100%;
+}
+
+.btnSearch {
+  background: cadetblue;
+  color: white;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 15px;
+  height: 25px;
+}
+.year {
+  height: 10px;
+  font-weight: bold;
+}
+.textCont {
+  width: 100%;
+  height: 30%;
+  background: rgb(180, 118, 118);
 }
 
 img {
-  height: 200px;
-  width: 200px;
+  height: 80%;
+  width: 100%;
+}
+
+.link {
+  background: rgb(27, 27, 255);
+  height: 100px;
+  border: 1px solid white;
+  font-size: larger;
+  color: white;
 }
